--- a/FakeDataGenerator.csproj
+++ b/FakeDataGenerator.csproj
@@ -20,6 +20,7 @@
     <ItemGroup>
       <PackageReference Include="Bogus" Version="34.0.1" />
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
+      <PackageReference Include="CsvHelper" Version="27.1.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
